# validate-branchname

./: .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: main.rs
src/validate_branchname/: cli.py
